--- a/src/app/personal-user-dashboard/information/information.css
+++ b/src/app/personal-user-dashboard/information/information.css
@@ -1,3 +1,9 @@
 @keyframes shimmer {
     100% { transform: translateX(100%); }
 }
+::-webkit-scrollbar{
+    width: 4px;
+}
+::-webkit-scrollbar-thumb{
+    background: rgb(166, 166, 166);
+}
