--- a/src/app/personal-user-dashboard/userdashboard/userdashboard.html
+++ b/src/app/personal-user-dashboard/userdashboard/userdashboard.html
@@ -219,10 +219,10 @@
                 </td>
 
                 <td class="px-4 py-3 text-center space-x-2">
-                    <button class="text-blue-600 hover:text-blue-700" (click)="view(i)">
+                    <button class="text-blue-600 hover:text-blue-700" title="View" (click)="view(i)">
                     <i class="fa-solid fa-eye"></i>
                     </button>
-                    <button class="text-green-600 hover:text-green-700" (click)="tripAction(i)">
+                    <button class="text-green-600 hover:text-green-700" title="Action" (click)="tripAction(i)">
                     <i class="fa-solid fa-route"></i>
                     </button>
                 </td>
@@ -551,10 +551,11 @@
   </form>
 </div>
 <div *ngIf="viewBox" class="min-h-screen w-full fixed inset-0 flex items-center justify-center bg-black/40 z-30">
-    <div class="flex flex-col gap-y-1 w-auto bg-white shadow shadow-gray-300 border-2 border-gray-200 rounded-md p-4">
-        <div class="flex justify-end">
+    <div class="overflow-x-auto flex flex-col gap-y-1 w-auto bg-white shadow shadow-gray-300 border-2 border-gray-200 rounded-md p-4">
+        <div class="flex justify-start">
             <button (click)="viewBox = !viewBox" class="border-2 border-gray-300 hover:border-gray-700 rounded"><i class="text-gray-500 fa-solid fa-xmark"></i></button>
         </div>
+        <div class="min-w-[350px] w-auto">
         <div class="flex justify-between">
             <p>Trip ID:</p><p class="ml-4 font-semibold">{{trips[indexView].tripId}}</p>
         </div>
@@ -591,6 +592,7 @@
         <div>
             <p>Notes:</p>
             <textarea name="" id="" class="w-full border-2 border-gray-500 rounded p-2">{{trips[indexView].notes}}</textarea>
+        </div>
         </div>
     </div>
 </div>
