--- a/src/app/personal-user-dashboard/userdashboard/userdashboard.html
+++ b/src/app/personal-user-dashboard/userdashboard/userdashboard.html
@@ -384,14 +384,14 @@
     </div>
     <div class="sm:col-span-2 flex justify-between mt-2">
       <button type="button" (click)="tripForm = !tripForm"
-      class="px-3 py-1.5 rounded-full text-red-600 border-2 border-red-300 hover:text-white
+      class="px-3 py-1.5 rounded-full bg-red-100 text-red-600 border-2 border-red-300 hover:text-white
                hover:bg-red-700 transition"
         >
         <i class="fa-solid fa-xmark"></i> Cancel
       </button>
       <button
         type="submit"
-        class="px-3 py-1.5 rounded-full text-green-600 border-2 border-green-300 hover:text-white
+        class="px-3 py-1.5 rounded-full bg-green-100 text-green-600 border-2 border-green-300 hover:text-white
                hover:bg-green-700 transition"
       >
        <i class="fa-solid fa-check"></i> Submit
@@ -535,14 +535,14 @@
     </div>
     <div class="sm:col-span-2 flex justify-between mt-2">
       <button type="button" (click)="actionForm = !actionForm"
-      class="px-3 py-1.5 rounded-full text-red-600 border-2 border-red-300 hover:text-white
+      class="px-3 py-1.5 rounded-full bg-red-100 text-red-600 border-2 border-red-300 hover:text-white
                hover:bg-red-700 transition"
         >
         <i class="fa-solid fa-xmark"></i> Cancel
       </button>
       <button
         type="submit"
-        class="px-3 py-1.5 rounded-full text-blue-600 border-2 border-blue-300 hover:text-white
+        class="px-3 py-1.5 rounded-full bg-blue-100 text-blue-600 border-2 border-blue-300 hover:text-white
                hover:bg-blue-700 transition"
       >
        <i class="fa-solid fa-pen-to-square"></i> Update
