--- a/src/app/personal-user-dashboard/personal-user-dashboard.html
+++ b/src/app/personal-user-dashboard/personal-user-dashboard.html
@@ -19,7 +19,7 @@
       <i class="fa-regular fa-bell text-2xl"></i>
     </button>
 
-    <button type="button" class="flex items-center justify-center hover:bg-green-600 text-gray-600 hover:text-white rounded p-2">
+    <button type="button" class="flex items-center justify-center hover:bg-green-600 text-gray-600 hover:text-white rounded p-2" (click)="isProfileVisible = !isProfileVisible">
       <i class="fa-regular fa-user text-2xl"></i>
     </button>
   </div>
@@ -45,7 +45,20 @@
   <div >
     <p *ngFor="let n of notifications" class="text-sm text-gray-600 hover:text-green-500 hover:bg-green-100 rounded px-4 py-2">{{n}}</p>
   </div>
+</div>
+
+<div *ngIf="isProfileVisible" class="flex flex-col gap-y-4 fixed top-[70px] right-0 w-64 h-64 overflow-y-auto bg-white shadow-lg p-4 z-30 ">
+  <div class="flex gap-x-4 items-center mb-6">
+    <img class="border-2 border-green-200 h-14 w-14 rounded-full" src="" alt="profile image">
+    <div class="flex flex-col">
+      <h3 class="font-semibold text-lg">VINITH M S</h3>
+      <p class="text-gray-600 text-sm">User</p>
+    </div>
+  </div>
   
+  <a routerLink="/profile" class="text-lg text-gray-600 hover:text-green-600"><i class="fa-solid fa-user-pen mr-4"></i>Profile Settings</a>
+  <a href="" class="text-lg text-gray-600 hover:text-green-600"><i class="fa-solid fa-key mr-4"></i>Change Password</a>
+  <a href="" class="text-lg text-gray-600 hover:text-green-600"><i class="fa-solid fa-right-from-bracket mr-4"></i>LogOut</a>
 </div>
 
 <div class="mt-[70px] p-4">
