--- a/src/app/service-user-dashboard/vehicle-info/vehicle-info.html
+++ b/src/app/service-user-dashboard/vehicle-info/vehicle-info.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col gap-y-8">
     <section class="sticky top-24 z-5 flex gap-x-4 justify-center w-full">
       <div class="w-1/2 h-12 relative">
-        <input type="search" class="rounded-l-full h-full px-6 w-full bg-white shadow-md" placeholder="Enter The Vehicle Number">
+        <input type="search" class="rounded-l-full h-full px-6 w-full bg-white shadow focus:outline-none focus:ring-2 focus:ring-green-200" placeholder="Enter The Vehicle Number">
         <button class="absolute top-0 bottom-0 rounded-r-full bg-green-500 w-12"><i class="text-white font-semibold fa-solid fa-magnifying-glass search-icon"></i></button>
       </div>
     </section>
