--- a/src/app/home-page/about/about.html
+++ b/src/app/home-page/about/about.html
@@ -1,1 +1,45 @@
-<p>about works!</p>
+<div class="mt-20 flex flex-col items-center ">
+   
+  <h1 class="text-3xl font-semibold text-[#00712D] mb-4">
+    About Us
+  </h1>
+
+  <p class="text-gray-600 max-w-3xl text-center mb-12">
+    Our EV Battery Monitoring system provides intelligent real-time analytics 
+    to enhance battery life, safety and efficiency using predictive data insights.
+  </p>
+
+  <div 
+    *ngFor="let step of steps; let i = index"
+    class="w-full max-w-6xl mb-20 px-6"
+  >
+
+    <h2 class="text-2xl text-[#00712D] font-semibold  mb-6 text-center">
+      {{ step.title }}
+    </h2>
+
+    <!-- Alternate Layout -->
+    <div 
+      class="flex flex-col md:flex-row items-center gap-12"
+      [ngClass]="{
+        'md:flex-row-reverse': i % 2 !== 0
+      }"
+    >
+
+      <!-- Description -->
+      <p class="md:w-1/2 text-gray-600 text-lg leading-relaxed">
+        {{ step.description }}
+      </p>
+
+      <!-- Image -->
+      <img 
+        [src]="step.image" 
+        alt=""
+        class="md:w-1/2 rounded-2xl shadow-xl shadow-green-200 hover:scale-105 transition duration-500"
+      />
+
+    </div>
+
+  </div>
+
+</div>
