--- a/src/app/home-page/contact/contact.html
+++ b/src/app/home-page/contact/contact.html
@@ -111,10 +111,10 @@
       <div>
         <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-green-100">
-          <li class="hover:text-white cursor-pointer transition">Home</li>
-          <li class="hover:text-white cursor-pointer transition">About</li>
-          <li class="hover:text-white cursor-pointer transition">Dashboard</li>
-          <li class="hover:text-white cursor-pointer transition">Contact</li>
+          <li class="hover:text-white cursor-pointer transition"><a href="/home">Home</a></li>
+          <li class="hover:text-white cursor-pointer transition"><a href="/about">About</a></li>
+          <li class="hover:text-white cursor-pointer transition"><a href="">Dashboard</a></li>
+          <li class="hover:text-white cursor-pointer transition"><a href="/contact">Contact</a></li>
         </ul>
       </div>
 
