--- a/src/app/home-page/generalhome/generalhome.html
+++ b/src/app/home-page/generalhome/generalhome.html
@@ -38,15 +38,15 @@
     </div>
   </div>
 
-  <div class="w-full h-[500px] overflow-x-auto hide-scrollbar">
-    <div class="flex h-full gap-x-8 px-12">
+  <div class="w-full px-12">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <div
         *ngFor="let v of vehicles"
-        class="bg-cover bg-center h-full w-[800px] md:w-[60vw] flex-shrink-0 flex flex-col p-12 justify-end items-start rounded-lg hover:scale-105 transition duration-500 cursor-pointer"
-        [style.backgroundImage]="'url(' + v.img + ')'"
+        class="bg-cover bg-center h-[500px] flex flex-col p-12 justify-end items-start rounded-lg hover:scale-105 transition duration-500 cursor-pointer"
+        [style.backgroundImage]="'url(' + v.buttonImg + ')'"
       >
-        <h1 class="text-white text-6xl font-bold">{{ v.name }}</h1>
-        <p class="text-white text-xl">{{ v.des }}</p>
+        <h1 class="text-black text-6xl font-bold">{{ v.name }}</h1>
+        <p class="text-black text-xl">{{ v.des }}</p>
         <button
           class="mt-4 bg-[#00712D] text-white px-4 py-2 rounded hover:bg-[#005a23] hover:scale-110 transition duration-300 shadow-lg hover:shadow-xl"
           (click)="navigate()"
